# ytx

./: .gitignore  .gitmodules  README.md  go.mod  go.sum  justfile
cmd/: api.go  auth.go  cache.go  cmd.go  main.go  runner.go  runner_test.go  setup.go  spotify.go  transfer.go  tui.go  ytmusic.go
internal/formatter/: formatter.go  formatter_test.go
internal/models/: doc.go  models.go
internal/repositories/: doc.go  migration.go  playlist.go  repositories.go  repositories_error_test.go  repositories_test.go  track.go  track_cache.go  user.go
internal/server/: doc.go  oauth.go  router.go  server.go
internal/services/: api.go  api_test.go  doc.go  services.go  spotify.go  spotify_test.go  youtube.go  youtube_test.go
internal/shared/: browser.go  config.example.toml  config.go  config_test.go  curl.go  curl_test.go  database.go  errors.go  migrations.go  migrations_test.go  shared.go  shared_test.go
internal/shared/sql/: 0000_create_tables_down.sql  0000_create_tables_up.sql  0001_add_soft_deletes_down.sql  0001_add_soft_deletes_up.sql
internal/tasks/: bulk_export.go  bulk_export_test.go  doc.go  tasks.go  tasks_test.go  updates.go
internal/testing/: testing.go
internal/ui/: colors.go  doc.go  key_map.go  list.go  message.go  ui.go
internal/web/: web.go
internal/web/templates/: base.html
music/: README.md  pyproject.toml  ruff.toml
music/src/api/: app.py  middleware.py
music/src/api/models/: __init__.py  requests.py  responses.py
music/src/cli/: __main__.py
music/tests/: test_api.py
